added header and styled it

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Limelight&family=Lobster&display=swap');
+
+/* font-family: 'Homemade Apple', cursive;
+
+font-family: 'Limelight', cursive;
+
+font-family: 'Lobster', cursive; */
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.vertically-center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.google-font-limelight{
+  font-family: 'Limelight', cursive;
+ 
+}
+
+.google-font-lobster{
+  font-family: 'Lobster', cursive;
+}
+
+.google-font-homemade-apple{
+  font-family: 'Homemade Apple', cursive;
 }
