--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -9,12 +9,11 @@
     rgba(134, 176, 255, 0.325) 94.9%
   );
   position: relative;
-
 }
 
 .header__container div h1 {
   /* border: 2px solid blue; */
-  width:100%;
+  width: 100%;
   margin: 0px;
   font-size: 115px;
   height: 80%;
@@ -24,20 +23,42 @@
   /* border: 2px solid blue; */
   height: 20%;
   font-size: 20px;
-  margin:0px;
+  margin: 0px;
 }
 
-
-.header__text-content{
+.header__text-content {
   /* border: 2px solid black; */
   height: 100%;
 }
 
-
 @media screen and (max-width: 852px) {
-
   .header__container div h1 {
     font-size: 85px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .header__container {
+    border-radius: 0px;
+    margin: 0px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    background-image: radial-gradient(
+      circle farthest-corner at 10% 20%,
+      rgb(245, 190, 226, 1) 9.8%,
+      rgb(216, 229, 253, 1) 94.9%
+    );
+
+    -webkit-box-shadow: 0px 4px 19px -1px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 4px 19px -1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 4px 19px -1px rgba(0, 0, 0, 0.3);
+  }
+
+  .header__container div p {
+    display: none;
   }
 }
 
@@ -45,32 +66,20 @@
   .header__container div h1 {
     font-size: 55px;
   }
-
-  .header__container div p {
-    font-size: 12px;
-  }
 }
 
 @media screen and (max-width: 433px) {
-
   .header__container div h1 {
     font-size: 35px;
 
     overflow: hidden;
   }
-
 }
 
-@media screen and (max-width: 294px) {
-
+@media screen and (max-width: 300px) {
   .header__container div h1 {
     font-size: 25px;
 
     overflow: hidden;
   }
-
-  .header__container div p {
-    display: none;
-  }
-
 }
