--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -28,7 +28,6 @@
   text-decoration: underline;
 }
 
-
 /* .product-card__container:hover .product-card__icon {
   border: 3px solid #d8e5fd;
 } */
@@ -64,6 +63,12 @@
     width: 100%;
     height: 100px;
     margin: 10px;
-    /* font-size: 25px; */
+  }
+}
+
+@media screen and (max-width: 319px) {
+  .product-card__container {
+    width: 100%;
+    margin: 5px;
   }
 }
