--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -18,7 +18,9 @@
   padding: 0px;
   margin: 5px auto;
 
-  border: 3px solid #f5bee3;
+  /* border: 3px solid #f5bee3; */
+
+  border: 3px solid #FFDDE1;
   border-radius: 19px;
   padding: 5px;
 }
