added unique button group

--- a/client/src/components/HomePageCard/Card.css
+++ b/client/src/components/HomePageCard/Card.css
@@ -1,7 +1,8 @@
 .product-card__container {
   /* border: 1px solid orange; */
 
-  background-color: #f9f8f8;
+  /* background-color: #f9f8f8; */
+  background-color: #F8F9FA;
   width: 215px;
   height: 150px;
   border-radius: 5px;
