--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -20,7 +20,7 @@
     #ffdde1,
     #ee9ca7
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  z-index: 1;
   position: relative;
 }
 
