--- a/client/src/components/HomePageCard/Card.css
+++ b/client/src/components/HomePageCard/Card.css
@@ -8,6 +8,7 @@
   border-radius: 5px;
   margin: 15px;
   font-size: 25px;
+  z-index: -1;
 
   -webkit-box-shadow: 10px 10px 15px -19px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 15px -19px rgba(0, 0, 0, 0.75);
