--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,18 @@ font-family: 'Limelight', cursive;
 font-family: 'Lobster', cursive; */
 
 
+html {
+  box-sizing: border-box;
+}
+
+*, *:before,*:after {
+  box-sizing: inherit;
+}
+
+.content-box-element {
+  box-sizing: content-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
